Simplify maps in indexing engine
Signed-off-by: Arpit Bandejiya <abandeji@amazon.com>
Co-authored-by: Bukhtawar Khan <bukhtawa@amazon.com>